Add recent and pinned apps, update popup/main/auth views - App Icons are now styled in a specific way to look the same - Pinned apps have been added to the popup and main - Minor changes to the main view layout (background, nav height) - Updated the popup on how to handle images and pinned vs recommended apps

--- a/src/main/styles.scss
+++ b/src/main/styles.scss
@@ -6,7 +6,7 @@ html, body {
   overflow-y: auto;
 }
 body {
-  background-color: #fafafa;
+  background-color: white;
 }
 
 a.hover-underline:hover::after {
